# chip8_emulator

./: .gitignore  CMakeLists.txt  README.md  chip8.cpp  chip8.h  main.cpp
app/: main.cpp
inc/: chip8.h  display.h  font.h
src/: chip8.cpp  display.cpp
